--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "framer-motion": "^11.14.4",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.0.0",
     "locomotive-scroll": "^4.1.4",
+    "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.3.1",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "react-select": "^5.9.0",
+    "reactflow": "^11.11.4",
+    "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
